- заменил List.of() на Collections.emptyList() - Перенес валидацию пользователя для методов добавления и удаления связи в БД mentorship из MentorshipServiceImpl в MentorshipController - Изменил код в методах deleteMentorship и addMentorship - Перенес инициализацию списка менторов и менти в Users