@@ -4,15 +4,13 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import school.faang.user_service.config.context.UserContext;
 import school.faang.user_service.dto.user.UserDto;
 import school.faang.user_service.entity.user.User;
 import school.faang.user_service.exception.DataValidationException;
-import school.faang.user_service.exception.ForbiddenException;
 import school.faang.user_service.mapper.UserMapper;
 import school.faang.user_service.repository.mentorship.MentorshipRepository;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -21,7 +19,6 @@ import java.util.Objects;
 @Service
 public class MentorshipServiceImpl implements MentorshipService {
 
-    private final UserContext userContext;
     private final MentorshipRepository mentorshipRepository;
     private final UserMapper userMapper;
 
@@ -30,26 +27,22 @@ public class MentorshipServiceImpl implements MentorshipService {
     public void addMentorship(long mentorId, long menteeId) {
         log.info("Adding mentorship: mentorId={}, menteeId={}", mentorId, menteeId);
 
-        MentorshipPair pair = authorizeAndLoadUsers(mentorId, menteeId);
+        User mentor = mentorshipRepository.getByIdOrThrow(mentorId);
+        User mentee = mentorshipRepository.getByIdOrThrow(menteeId);
 
-        List<User> mentors = pair.mentee.getMentors();
-        if (mentors == null) {
-            mentors = new ArrayList<>();
-            pair.mentee.setMentors(mentors);
-        }
+        List<User> mentors = mentee.getMentors();
 
         boolean alreadyExists = mentors.stream()
                 .filter(Objects::nonNull)
-                .anyMatch(mentor -> Objects.equals(mentor.getId(), mentorId));
+                .anyMatch(m -> Objects.equals(m.getId(), mentorId));
 
         if (alreadyExists) {
             log.info("Mentorship already exists: mentorId={}, menteeId={}", mentorId, menteeId);
             throw new DataValidationException("Связь уже существует");
         }
 
-        mentors.add(pair.mentor);
-        mentorshipRepository.save(pair.mentee);
-
+        mentors.add(mentor);
+        mentorshipRepository.save(mentee);
 
         log.info("Mentorship added successfully: mentorId={}, menteeId={}", mentorId, menteeId);
     }
@@ -59,16 +52,12 @@ public class MentorshipServiceImpl implements MentorshipService {
     public void deleteMentorship(long mentorId, long menteeId) {
         log.info("Deleting mentorship: mentorId={}, menteeId={}", mentorId, menteeId);
 
-        MentorshipPair pair = authorizeAndLoadUsers(mentorId, menteeId);
+        User mentee = mentorshipRepository.getByIdOrThrow(menteeId);
 
-        List<User> mentors = pair.mentee.getMentors();
-        if (mentors == null || mentors.isEmpty()) {
-            log.warn("Mentorship not found (list is empty): mentorId={}, menteeId={}", mentorId, menteeId);
-            throw new DataValidationException("Связь не найдена");
-        }
+        List<User> mentors = mentee.getMentors();
 
-        boolean removed = mentors.removeIf(mentor ->
-                mentor != null && Objects.equals(mentor.getId(), mentorId)
+        boolean removed = mentors.removeIf(m ->
+                Objects.equals(m.getId(), mentorId)
         );
 
         if (!removed) {
@@ -76,12 +65,13 @@ public class MentorshipServiceImpl implements MentorshipService {
             throw new DataValidationException("Связь не найдена");
         }
 
-        mentorshipRepository.save(pair.mentee);
+        mentorshipRepository.save(mentee);
 
         log.info("Mentorship deleted successfully: mentorId={}, menteeId={}", mentorId, menteeId);
     }
 
     @Override
+    @Transactional
     public List<UserDto> getMentees(long userId) {
         log.debug("Fetching mentees for userId={}", userId);
 
@@ -90,7 +80,7 @@ public class MentorshipServiceImpl implements MentorshipService {
 
         if (mentees == null || mentees.isEmpty()) {
             log.debug("No mentees found for userId={}", userId);
-            return List.of();
+            return Collections.emptyList();
         }
 
         return mentees.stream()
@@ -100,6 +90,7 @@ public class MentorshipServiceImpl implements MentorshipService {
     }
 
     @Override
+    @Transactional
     public List<UserDto> getMentors(long userId) {
         log.debug("Fetching mentors for userId={}", userId);
 
@@ -108,7 +99,7 @@ public class MentorshipServiceImpl implements MentorshipService {
 
         if (mentors == null || mentors.isEmpty()) {
             log.debug("No mentors found for userId={}", userId);
-            return List.of();
+            return Collections.emptyList();
         }
 
         return mentors.stream()
@@ -116,25 +107,4 @@ public class MentorshipServiceImpl implements MentorshipService {
                 .map(userMapper::toUserDto)
                 .toList();
     }
-
-    private MentorshipPair authorizeAndLoadUsers(long mentorId, long menteeId) {
-        long currentUserId = userContext.getUserId();
-
-        if (currentUserId != mentorId && currentUserId != menteeId) {
-            log.warn("Access denied for userId={} trying to manage mentorship between mentorId={} and menteeId={}",
-                    currentUserId, mentorId, menteeId);
-            throw new ForbiddenException("Доступ запрещен");
-        }
-
-        if (mentorId == menteeId) {
-            log.warn("Invalid mentorship request: mentorId equals menteeId={}", mentorId);
-            throw new DataValidationException("Вы не можете выбрать себя");
-        }
-
-        User mentor = mentorshipRepository.getByIdOrThrow(mentorId);
-        User mentee = mentorshipRepository.getByIdOrThrow(menteeId);
-        return new MentorshipPair(mentor, mentee);
-    }
-
-    private record MentorshipPair(User mentor, User mentee) {}
 }
